Lisätty uusi rivi

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="container">
             <h1>Dominoi Kenttää</h1>
             <p class="lead mb-4 mx-auto" style="max-width: 700px;">
-                Nosta pelisi tasoa ja yllätä vastustajasi Padel Coachin opeilla.
+                Nosta pelisi tasoa ja yllätä vastustajasi Padel Coachin opeilla!
             </p>
             <a href="#booking" class="btn btn-neon mt-3">Varaa Valmennus Nyt</a>
         </div>
