--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                     <input type="date" class="form-control" required>
                                 </div>
                                 <div class="col-md-6">
-                                    <label class="form-label fw-bold">Toivottu Kellonaika</label>
+                                    <label class="form-label fw-bold">Toivottu kellonaika</label>
                                     <input type="time" class="form-control" required>
                                 </div>
                                 <div class="col-md-6">
